# news_recommendation

./: .gitignore  main.py  pyproject.toml
jupyter/: sort_model.ipynb
jupyter/.ipynb_checkpoints/: baseline-checkpoint.ipynb  sort_model-checkpoint.ipynb
tmp_results/feature/: trn_lgb_cls_feats.csv
tmp_results/rank/: din_12-24.csv  ensemble_fuse_12-24.csv  lgb_cls_12-24.csv  lgb_ranker_12-24.csv  trn_lgb_ranker_feats.csv
tmp_results/recall/: item_youtube_emb.pkl
